<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FoSP.java</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="full_app_name">Foundations of Successful Programming in Java</string>
    <string name="app_description">This quiz is intended to cover a variety of topics important to CS160 and CS161 to strengthen programming practices for students.</string>
    <string name="button_start">Begin quiz!</string>
    <string name="backVal">Back</string>
    <string name="nextVal">Next</string>
    <string name="default_question">QUESTION TEXT</string>
    <string name="finishVal">Finish!</string>
    <string name="numUnanswered">Number of unanswered questions: </string>
    <string name="numCorrect">Number of correct answers: </string>
    <string name="numIncorrect">Number of incorrect answers: </string>
    <string name="FoSPIcon"></string>
    <string name="score">Your score: </string>

</resources>