<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/numCorrect"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textColor="@color/Green"/>

    <TextView
        android:id="@+id/textNumCorrect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textColor="@color/Green" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numIncorrect"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textColor="@color/Red" />

    <TextView
        android:id="@+id/textNumIncorrect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textColor="@color/Red" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numUnanswered"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/Yellow" />

    <TextView
        android:id="@+id/textNumUnanswered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/Yellow" />

    <TextView
        android:id="@+id/textScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/buttontext_size" />

</LinearLayout>